--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,19 @@ h2 {
 h3 {
   color: #307dff;
 }
+
+/* mobile */
+@media only screen and (max-width: 425px) {
+  h2 {
+    color: #307dff;
+    font-size: 20px !important;
+    padding-top: 8px !important;
+  }
+
+  h3 {
+    color: #307dff;
+    font-size: 16px !important;
+    padding-top: 8px !important;
+  }
+
+}
