--- a/src/Components/Page/Items/GetItems.css
+++ b/src/Components/Page/Items/GetItems.css
@@ -24,3 +24,25 @@ td {
 button {
  /* margin: 5px; */
 }
+
+@media only screen and (max-width: 425px) {
+
+ thead th {
+  padding: 5px;
+  margin: 5px;
+ }
+
+ tr {
+  border: 1px solid #307dff;
+  border-radius: 5px;
+  margin: 2px;
+  padding: 2px;
+ }
+
+ td {
+  padding: 5px;
+
+ }
+
+
+}
